Il manque la conclusion et les references

--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -42,10 +42,22 @@
 
 \section*{Introduction}
 
-Aujourd'hui, le réchauffement  climatique, qui a été intensifié par l’homme, est une réalité.
-Pour éviter des possibles conséquences désastreux, les dirigeants politiques ont initié une politique de lutte contre le réchauffement de la planète. 
-Quelques actions ont été pris pour réduire le réchauffement climatique, par exemple, le protocole de Kyoto a été créer pour que on puisse réduire la quantité des gaz à effet de serre, un responsable du réchauffement climatique. Cependant , les actions pour améliorer la situation affect négativement  la économie, donc il existe des pays industrialisés que n’acceptent pas prendre des actions que atténueront  le développement du pays.
-La France est un grand sympathisant des actions contre le réchauffement climatique. Mais, quelques solutions ont produit quelques effets négatifs dans l’industrie, et les nouvelles solutions ont  comme barrière les ressources énergiques.
+Aujourd'hui, le réchauffement climatique, qui  a été intensifié par l’homme, est
+une réalité.
+Pour éviter des possibles conséquences désastreux, les dirigeants politiques ont
+initié une politique de lutte contre le réchauffement de la planète. 
+Quelques  actions ont  été pris  pour réduire  le réchauffement  climatique, par
+exemple,  le protocole  de  Kyoto a  été créer  pour  que on  puisse réduire  la
+quantité  des   gaz  à   effet  de  serre,   un  responsable   du  réchauffement
+climatique.  Cependant,  les   actions  pour  améliorer  la  situation  affect
+négativement la économie, donc il existe des pays industrialisés que n’acceptent
+pas prendre des actions que atténueront le développement du pays.
+
+La  France  est  un  grand  sympathisant des  actions  contre  le  réchauffement
+climatique. Mais,  quelques solutions ont produit quelques  effets négatifs dans
+l’industrie,  et  les nouvelles  solutions  ont  comme  barrière les  ressources
+énergiques.
+
 
 \section{Approche théorique du réchauffement climatique}
 \subsection{Les concepts à savoir sur le réchauffement climatique}
@@ -54,7 +66,9 @@ Le  planète  dans   les  derniers  années  souffre  d'une   augmentation  de  
 température, dont le responsable est l'homme. Si ce réchauffement ne cesse pas
 on  aura  des  conséquences   apocalyptiques.  Par  exemple,  l'augmentation  de
 température pourra provoquer la disparition  de certaines espèces dans la Terre,
-ainsi comme il causera la fonte des glaces et la montée des océans, ce qui multiplie le risque de catastrophes naturelles (tsunamis, inondations…).
+ainsi comme  il causera  la fonte  des glaces et  la montée  des océans,  ce qui
+multiplie le risque de catastrophes naturelles (tsunamis, inondations…).
+
 
 % http://www.jedessine.com/c_16133/lecture/reportages-pour-enfant/les-sciences/le-developpement-durable-explique-aux-enfants/le-rechauffement-climatique
 
@@ -68,8 +82,8 @@ que -18°C sur Terre!
 
 Le problème est que si la quantité de ces gaz augmentait fortement, cette couche
 augmente et le planète ira se réchauffer plus! 
-Donc, le problème du réchauffement climatique est que justement le volume des gaz à effet de serre est en trop forte augmentation.
-
+Donc, le  problème du réchauffement climatique  est que justement  le volume des
+gaz à effet de serre est en trop forte augmentation.
 
 La figure \ref{fig:effetserre} démontre le schéma explicatif de l'effet de serre.
 On peut voir que une partie du rayonnement infrarouge (en rouge), presque 95\%, est absorbée et ré-émise par les molécules
@@ -343,54 +357,64 @@ l’ordre de 15 \% du potentiel productible.
 
 Les ONG écologistes estiment toujours que les politiques européennes ne vont pas
 assez loin,  cela veut dire que  les efforts font pour  ramener le réchauffement
-climatique à  un niveau  moins intense sont  insuffisantes. Ainsi, les  ONG (CAN
-Europe, Friends of Earth, Greenpeace et le WWF) ont exigé une 
-révision  en   profondeur  du  PECC   (Programme  européen  sur   le  changement
-climatique), et l'établissement d'objectifs et de politiques plus ambitieux. 
+climatique à un niveau moins intense sont insuffisantes, par exemple l' objectif 
+de réduction de 20\% plutôt que 30\% est inacceptable .
+  Ainsi, les ONG
+(CAN\footnote{Le  réseau  action climat  Europe  (CAN-E)  est  reconnu comme  le
+  premier réseau européen dans le domaine du climat et des énergies. CAN-E lutte
+  contre le  changement climatique et  promeut les énergies renouvelables  et la
+  politique environnementale européenne.}
+Europe, Friends  of Earth\footnote{Les Amis de  la Terre (Friends  of Earth) est
+  une  organisation non  gouvernementale (ONG)  de protection  de l'Homme  et de
+  l'environnement    créée   en    1969,   et    présente   dans    76   pays.},
+Greenpeace\footnote{ Le  greenpeace est une organisation  non gouvernementale de
+  protection de l'environnement présente dans plus de quarante pays à travers le
+  monde.}  et le  WWF\footnote{Le World  Wide Fund  for Nature  est  la première
+  organisation mondiale de protection de  la nature.}) ont exigé une révision en
+profondeur  du  PECC  (Programme  européen  sur le  changement  climatique),  et
+l'établissement d'objectifs et de politiques plus ambitieux.  
+
+
 
 À cause de cette faible ambition, les ONG supportent que la révolution énergétique
-européenne est une "rêve encore lointain" et que les propositions
-dans le domaine de l'énergie "ne  sont pas convaincantes et pourraient avoir des
+européenne est une ``rêve encore lointain'' et que les propositions
+dans le domaine de l'énergie ``ne  sont pas convaincantes et pourraient avoir des
 conséquences  négatives,  notamment en  ce  qui  concerne  les biocarburants  et
-l'énergie nucléaire."
-
+l'énergie nucléaire.''~\cite{ONG}
 
 
 \subsection{La société en général} 
 
 Selon des sondages environ 84\% des Français croient à la réalité du réchauffement
-climatique et  parmi les  personnes qui croient,  96\% disent que  les activités
+climatique et  parmi ces  personnes  96\% disent que  les activités
 humaines ont intensifié le phénomène.
-Toutefois, parmi les 84\% seulement 40\% y croient "tout à fait", les autres déclarent "plutôt" y
+Toutefois, parmi les 84\% seulement 40\% y croient "tout à fait", pendant que les autres déclarent "plutôt" y
 croire (44\%). 
 
-Cependant, Seulement 31\% des Français sont convaincus que le réchauffement climatique est
+Cependant, seulement 31\% des Français sont convaincus que le réchauffement climatique est
 scientifiquement prouvé.
 
-
-La plupart des Français considèrent  que les conséquences des activités humaines
-sur le réchauffement climatique sont minorées (49\%) ou exagérées (33\%). Ces résultats
-démontrent qu'il existe des doutes sur la crédibilité des scientifiques sur le
+De plus, la plupart des Français considèrent que les conséquences des activités humaines
+sur le réchauffement climatique sont minorées (49\%) ou exagérées (33\%). 
+Ainsi, ces résultats démontrent qu'il existe des doutes sur la crédibilité des scientifiques sur le
 sujet. 
 
-
-En relation a la prise de mesures pour résoudre le problème au niveau mondial 
-Seulement 56\% des Français pensent que des mesures seront
-prises dans  les prochaines années  pour freiner le réchauffement  climatique.
+Par ailleurs, seulement 56\% des Français pensent que de mesures pour résoudre le
+problème au niveau mondial seront prises dans  les prochaines années  pour freiner le réchauffement  climatique.
 
 \subsection{Les entreprises}
 
 Les entreprises européens jugent que la politique  de  lutte  contre  le
 changement climatique de l'UE les nuisent, et alors affect sa position concurrentielle dans l'économie
 mondiale. Ils  ont, plusieurs  fois , critiqué  la stratégie  "unilatérale" (une
-solution seulement européenne )en
+solution seulement européenne) en
 soulignant la nécessité de solutions globales.
 
 Par  exemple, en  2009  plusieurs fédérations  professionnelles  comme UNICE  et
 Eurochambres, ainsi que le Conseil  européen de l'industrie chimique (CEFIC) ont
 critiqué le caractère  unilatéral des objectifs de réduction  d'émissions de CO2
 en  disant que  les  objectifs de  réduction  étions trop  élevés,  et comme  il
-existait des grand  pays pollueurs qui ne feraient pas  cette réduction, et cela
+existait des grand  pays pollueurs qui ne feraient pas  cette réduction, cela
 affaiblirait la compétitivité de l'Europe dans le monde sans avoir de véritables effets sur la
 protection de l'environnement.
 
@@ -398,21 +422,301 @@ D'autre part, l'industrie a peur d'une hausse du prix d'énergie renouvelable, e
 cela hausserai  les prix de  toutes les choses.  Pour que cette  prix n'augmente
 pas, une offert d'énergie nucléaire doit être intensifié.
 
-%\subsection{Les économistes} 
+% \subsection{Les économistes} 
+
+\section{La position de la France dans le monde}
+
+\subsection{L’avis du gouvernement  Français}
+
+Le gouvernement français participe activement dans les sommets sur la situation du réchauffement climatique où sont fixes los objectifs de réduction des émissions à moyen terme conformément aux recommandations scientifiques. 
+
+D'une part, la France a créé l’Agence française de développement (AFD) pour développer le soutien budgétaire en faveur de pays mettant en œuvre projets d’intégration du climat dans leur stratégie de déploiement. L’AFD a ainsi déjà soutenu, en coopération avec d’autres financeurs internationaux, des pays comme l’Indonésie, le Mexique, le Vietnam et l’île Maurice. Ce plan a eu au total 1,7 milliard de dollars d’investissement depuis 2008.
+
+À ce sujet, la France met en œuvre un effort supplémentaire de 1,26 milliard d’euros sur la période 2010-2012 au titre de son engagement pris à Copenhague de financement précoce de sorte que le 20 \% de sa contribution soit destiné à la forêt.
+
+D’autre part, le Fonds Français pour l'Environnement Mondial (FFEM) est un fonds public bilatéral créé par le gouvernement français en 1994 pour accompagner les pays en développement à mettre en œuvre des stratégies et des projets innovants conciliant préservation de l’environnement et développement économique et social. En partenariat avec des autres acteurs publics, le FFEM subventionne des opérations innovantes dans les principaux domaines de l’environnement mondial comme le changement climatique, biodiversité, déforestation et désertification.
+
+D’ailleurs, la France soutient le développement de partenariats concrets en complément des négociations, et promeut à ce titre l’initiative pour développer l'accès aux énergies propres dans les pays les plus vulnérables aux changements climatiques. Un exemple concret est le projet « Paris-Nairobi », lancée avec le Kenya le 21 avril dernier. En outre, la présidence française du G20\footnote{Le Groupe des 20 est un groupe de 19 pays plus l'Union européenne dont les ministres, les chefs des banques centrales et les chefs d'États se réunissent régulièrement pour favoriser la concertation internationale.} s’est particulièrement impliquée dans la promotion du développement des infrastructures en Afrique, notamment dans le domaine de l’énergie. 
+
+Par rapport aux événements récents, la France consent l'accord de Durban (conformément aux décisions prises à Cancun) qui permettre de renforcer l’ambition du régime international de lutte contre le changement climatique. En conformité avec l’Union européenne, elle continuera à assumer toutes ses responsabilités et à rester force de proposition principale contre le changement climatique. 
+
+Cette aide offerte par la France se concrétisera comme suit:
+\begin{enumerate}
+\item Par le canal multilatéral, avec une participation à la reconstitution du Fonds pour L'environnement Mondial (FEM) et une contribution au Fonds pour les technologies propres de la Banque mondiale.
+\item Par le canal bilatéral, avec la reconstitution du FFEM et les interventions de l’AFD.
+\end{enumerate}
+
+\subsection{Loi et taxes}
+
+\subsubsection{La taxe carbone}
+
+C’est  un projet  de  loi  de contribution  au  climat et  l’énergie  qui a  été
+abandonné en  2010 par le  gouvernement français car  à cette époque ce  type de
+projet devait être Européen et pas uniquement français. 
 
 
-\section{L’avis du gouvernement}
-\subsection{Les politiciens}
-\subsection{Les lois et taxes}
+Ce projet  connu comme la «Taxe carbone»  est de retour pour  l’année 2012 comme
+une taxe exceptionnelle  sur le CO2 orientée aux gros  pollueurs, cela veut dire
+de taxer les 400 entreprises françaises  les plus émettrices de CO2 (à partir de
+60 000 tonnes de rejets par an). 
+
+
+Cette taxe exceptionnelle pourrait engendrer une recette de 220 millions d’Euros
+pour le  gouvernement et sera  inscrite dans le  projet de loi de  finances pour
+cette année. Les  secteurs d’activités les plus concernés  par cette taxe seront
+la chimie, l’agroalimentaire, l’électricité et les grandes chaufferies. 
+
+
+Néanmoins, le Groupe des Fédérations Industrielles (GFI) estime que cette taxe va nuire grandement à leur compétitivité à cause du coût de 150 millions d’Euros pour les industries françaises. De plus, le GFI affirme que l’assiette du chiffre d’affaire n’est pas adaptée dans l’économie moderne. Il propose au gouvernement d’instaurer à la place un système d’enchère pour l’acquisition de quotas de CO2 supplémentaires en 2012.
+Par  ailleurs, Eva Joly,  la candidate  du parti  politique Europe  Écologie Les
+Verts  propose  une  taxe  sur  les  énergies  non  renouvelables  (fossiles  et
+nucléaires)  qui selon  elle  rapporterait  12 milliards  d’Euros  avec la  taxe
+carbone et  qui pourrait permettre la  mise en place  de « chèques verts  » pour
+inciter les citoyens et les entreprises à changer leurs habitudes.
+
+
+\subsubsection[La loi sur l’eau et les milieux aquatiques (LEMA)]{La loi sur l’eau et les milieux aquatiques (LEMA) du 30 décembre 2006}
+
+Cette loi propose la mise en place de mesures contre les pollutions diffuses dans les secteurs sensibles comme les zones d’alimentation des captages, les zones humides d’intérêt particulier et d’érosion diffuse.
+Elle donne les moyens de contrôle de vente des produits polluants. La taxe globale associé a ce type d’activité sur les produits phytosanitaires est transformée en une redevance au profit des agences de l’eau prenant en compte toxicité de ces produits.
+
+\subsubsection{Taxe sur des émissions des secteurs maritimes et des transports aériens}
+
+La France évalue comme option de financement innovant une taxe sur les émissions
+des secteurs  maritimes et des  transports aériens. Ces  financements innovants,
+portés par  la présidence française  dans le cadre  du G20 joueront un  rôle clé
+pour  atteindre ces  objectifs, cela  veut dire  de mobiliser  100  milliards de
+dollars chaque année et ce à l’horizon 2020 notamment pour le nouveau Fonds vert
+pour le climat.
+
+
+Aujourd'hui ni le  secteur aérien ni le transport  maritime, qui représentent un
+pourcentage importante des  émissions globales de gaz à effet  de serre, ne sont
+pas soumis  à des contraintes de  réduction de ses émissions.  Mais, d’être fixé
+cette taxe pourrait restreignit les activités polluantes dans ces industries.
+
+
 \subsection{Les traités internationaux}
+
+\subsubsection[Le protocole de Kyoto]{Le protocole de Kyoto: 3ème Conférence des Nations Unies sur les changements climatiques  (01/12/1997)}
+
+Le protocole de  Kyoto, signé en 1997  mais en vigueur depuis 2005,  a prévu des
+engagements de réduction des émissions de la part des 38 pays industrialisés qui
+se sont  engagés à réduire  les émissions de  gaz à effet  de serre de  5,2\% en
+moyenne  au 2012  (année  où le  protocole  expire), par  rapport  au niveau  de
+1990. La  France a signé  le protocole  de Kyoto en  1998, elle s’est  engagée à
+réduire  ses  émissions  de  gaz  à  effet de  serre  selon  les  résultats  des
+négociations.
+
+
+Ils  se  sont engagés  à  réduire  leurs émissions  par  rapport  à  1990 :  les
+Etats-Unis de  7\%, l’Union  européenne de 8\%,  le Japon  et le Canada  de 6\%,
+tandis que des  pays comme l’Australie, l’Islande se sont  engagés à contenir la
+progression de leurs émissions.
+
+
+Malgré  les accords conclus  à Kyoto  et sous  la pression  d'un groupe  de pays
+conduits  par les  Etats-Unis, des  mécanismes  de flexibilité  sont créés  pour
+permetre aux pays de remplir leurs obligations non pas en limitant ses émissions
+mais en finançant des réductions à l'étranger. 
+
+
+En ce qui concerne  a le fait de refuser de participer  à ce protocole, certains
+pays estiment  que les mesures accordés  sont trop strictes, un  exemple de cela
+est lorsque un pays ne respecte pas son engagement, il doit verser de l’argent à
+l’Organisation des Nations unies (ONU) qui  le reverse à des pays qui produisent
+peu de gaz à effet de serre et qui sont souvent plus pauvres.
+
+
+En mars  2001 les Etats-Unis, pays  où les émissions représentant  en effet 25\%
+des   émissions   mondiales,   ont   refusé   de  ratifier   le   protocole   de
+Kyoto. Cependant,  Les autres pays  industrialisés ont décidé de  poursuivre les
+négociations et d'appliquer ce protocole.
+
+
+En décembre  2011 Canada  a décidé  de sortir du  protocole car  le gouvernement
+estime qu’il  ne pourra  jamais respecter ses  engagements, et qu’il  devra trop
+payer.
+
+
+\subsubsection[Le sommet à Copenhague]{Le sommet à Copenhague : Le sommet des Nations unies sur les changements climatiques (7/12/2009)}
+
+D’abord, les pays développés ont  pris l'engagement collectif de financer sur la
+période 2010-2012,  à titre de  «démarrage précoce» («fast start»),  des actions
+dans  les pays  en développement  en  faveur de  la lutte  contre le  changement
+climatique. Cet engagement a été décidé pour un montant global de 30 milliards
+de dollars ce  qui représente pour l'Union européenne et  ses Etats membres, sur
+la période de trois ans, un effort de 7,2 milliards d'euros et particulièrement
+1,26 milliard d'euros pour la France. 
+
+Pourtant, il n’y a pas eu un  consensus entre les délégués des 193 pays réunis à
+Copenhague,  cela a  terminé par  l’adoption  d’un texte  mis au  point par  les
+Etats-Unis et quatre pays émergents, la Chine, le Brésil, l'Inde et l'Afrique du
+Sud. Ce texte souligne la nécessité de limiter le réchauffement planétaire à 2°C
+par rapport à  l’ère pré-industrielle mais ne comporte  aucun engagement chiffré
+de réduction des émissions de gaz à effet de serre. 
+
+
+\subsubsection[L’accord au sommet de Cancun sur le climat]{L’accord au sommet de Cancun sur le climat (10/12/2010)}
+
+Dans le  cadre de cette  conférence s’est adopté  à la quasi unanimité  (sauf la
+Bolivie),  un texte mettant  en place  une série  de mécanismes  financiers pour
+lutter  contre le  réchauffement  climatique et  promouvoir  l'adaptation à  ses
+effets. C’est  à dire  la création  d’un fonds vert  pour soutenir  les projets,
+programmes et politiques d'adaptation des pays en développement. 
+
+
+En effet, l'accord de Cancun ne repose que sur des mécanismes non-contraignants,
+confirmant  les les  décisions  prises à  Copenhague,  et ne  prévoit rien  pour
+prolonger le protocole  de Kyoto au delà  de 2012. De plus, il  est consideré la
+mise en place  du mécanisme REDD (Ressources pour  le développement durable) qui
+consiste à  rémunérer financièrement les populations locales  impliquées dans la
+gestion des forêts. 
+
+
+Par  ailleurs, Les  décisions  de Cancun  réaffirment  et amplifient  l’ambition
+collective  de  réduction des  émissions  qui avait  été  celle  de l’accord  de
+Copenhague,  ces  décisions comportent  aussi  des  mesures  concrètes dans  les
+domaines  technologiques,  le  Fonds  vers,  du mécanisme  de  lutte  contre  la
+déforestation (REDD), ainsi  que le développement propre aux  projets de capture
+et de stockage du carbone.
+
+
+En dernier lieu,  selon les acquis de  Copenhague et de Cancún, le  but des pays
+forestiers est d’abord  élaborer des stratégies nationales pour  mettre en place
+des  systèmes  de  suivi de  l’état  des  forêts  pour renforcer  les  capacités
+institutionnelles et la  expérience dans les projets pilotes  à l’échelle locale
+et régionale.
+
+
+\subsubsection[La conférence annuelle des Nations-Unies sur le climat de Durban]{La conférence annuelle des Nations-Unies sur le climat de Durban (11/12/2011)}
+
+Dans  un premier  temps l’'un  des défis  de Durban  était de  mettre  en oeuvre
+certaines  des  décisions  prises  à  Cancun,  notamment  sur  le  sujet  de  la
+transparence  et  de la  vérification  possible  des  actions de  réduction  des
+différents pays. 
+
+
+Un des sujets abordés a été le Fonds vert pour aider les pays en développement à
+faire face au changement climatique.  Ce Fonds doit acheminer des financements à
+partir de 2013 pour monter en puissance jusqu'en 2020, date à partir de laquelle
+les  pays industrialisés  ont promis  de verser  chaque année  100  milliards de
+dollars.
+
+
+D’autre  part, l'accord  prévoit  par ailleurs  la  mise en  place d'un  travail
+préparatoire pour éventuellement faire entrer l'agriculture, à l'origine de 15\%
+des émissions de gaz à effet de serre. 
+
+
+Pourtant, le  résultat c’est un  document habilitant, qui reconnaît  l'écart des
+émissions, confirme l'objectif à long terme, et encourage le multilatéralisme.
+
+
+De plus, la décision de Durban prévoit  une deuxième période dont la durée (5 ou
+8 ans) doit encore  être débattue. Mais en l'absence du Canada,  de la Russie et
+du  Japon, qui  ont refusé  de renouveler  l'exercice, ces  nouveaux engagements
+contraignants  ne s'appliqueront qu'à  environ 15\%  des émissions  mondiales en
+raison du volume impliqué dans les pays participants.
+
+
+Finalemente, au  futur, la possibilité  d'une seconde période  d'engagements sur
+Kyoto serait  discuté et signé en  2015 pour une  entrée en vigueur à  partir de
+2020. 
 
 
 \section{Analyse des solutions proposés par chaque partie}
+
 \subsection{Présentation des solutions}
+
+Pendant les dernières  années plusieurs conférences entre pays  ont été réalises
+pour  développer  les  solutions   plus  efficaces  pour  résoudre  le  problème
+climatique. L’un de plus importants est la réduction des émissions et les seuils
+de  précaution   scientifiques  pour  limiter  le   réchauffement  climatique  à
+1,5°C. Cela impliquerait que les  pays industrialisés amorcent des réductions de
+25\% à 40\% d'ici à 2020. 
+
+
+Les  pays  développés  comme  ceux  de  l’UE,  la  Norvège,  l'Australie  et  la
+Nouvelle-Zélande ont  accepté de participer à une  deuxième période d'engagement
+du Protocole  de Kyoto qui débuterait  au 1er Janvier 2013  et s'étendre jusqu'à
+2017 ou 2020 (période pas encore défini). C’est important de noter que l'étendue
+de la participation du Japon, la Russie  et le Canada dans le Protocole de Kyoto
+phase  II reste incertaine,  même si  ils ont  dit clairement  non avant  la COP
+(Conférence des parties).
+
+
+Par  ailleurs,  les  pays  ont  convenu  de travailler  sur  un  nouveau  traité
+climatique international  qui inclurait pour  la première fois les  deux groupes
+des  pays  (ceux  développés  et  ceux en  développement).  Ils  décideront  des
+modalités de ce traité en 2015 et sa  mise en œuvre à partir de 2020. Ainsi, les
+grands émetteurs comme la Chine, l'Inde et Etats-Unis auront engagements légales
+d'émissions après 2020. 
+
+
+Ainsi, une  des principales  solutions proposées, le  Fonds vert pour  le climat
+(GCF  en  anglais)  de  100  milliards  de  dollars  (en  2020)  est  maintenant
+opérationnel  et  aura sa  première  réunion  en Suisse  avec  la  Corée du  Sud
+fournissant démarrage financement pour le fonds. Bien que son lancement a été un
+succès  notable, il  existe le  défaut  de fournir  des signaux  clairs sur  les
+méthodes de financement à long terme  pour soutenir les pays en développement ce
+que peut être décevant. 
+
+
+Dernièrement, l’année prochaine se réalisera la COP 18 à Qatar où les sujets sur
+les  rapports  techniques  à  utiliser  et  la base  pour  la  détermination  de
+financement à long terme seront abordés.
+
+
 \subsection{Comparaison des solutions et son impact dans la société}
+
+Les solutions proposés ont deux impacts différents par rapport aux types de pays, les émergents et les développés.
+
+D’une part, selon l'Agence Internationale  d'énergie, la Chine va conforter dans
+les  20  prochaines  années   sa  position  de  premier  consommateur  d'énergie
+mondial. Ses émissions per capita  atteindront celles des pays très polluants en
+2035. Quant au Brésil, il vient de  réformer son code forestier ce qui permet la
+destruction massive de son précieux écosystème. 
+
+
+D’autre part, l'immensité  du défi, combinée à la crise  de la dette européenne,
+prive la planète de leaders à la  mesure de l'enjeu. Tandis que l'Inde, la Chine
+et les  Etats-Unis concourent à torpiller  le processus, l'Europe,  minée par la
+crise de la dette, se divise. 
+
+
+Enfin, le  Fonds vert, principal  acquis de la  négociation à Cancun,  destiné à
+soutenir  les  pays  vulnérables   aux  conséquences  du  réchauffement,  et  au
+financement   d'une  transition   énergétique  soutenable   dans  les   pays  en
+développement, ce Fonds, qui devait être abondé de 30 milliards de dollars entre
+2010 et  2012, puis  de 100 milliards  de dollars  par an à  partir de  2020, ne
+récolte que  quelques dizaines  de millions  de dollars pour  le moment.  Ce qui
+n’arrive pas  aux objectifs  attendus et  qui démontre qu’il  manque un  un long
+chemin pour développer et aller négocier.
+
+
+
+% \section{L’avis du gouvernement}
+% \subsection{Les politiciens}
+% \subsection{Les lois et taxes}
+% \subsection{Les traités internationaux}
+
+
+% \section{Analyse des solutions proposés par chaque partie}
+% \subsection{Présentation des solutions}
+% \subsection{Comparaison des solutions et son impact dans la société}
 
 
 \section*{Conclusion}
-\section*{Bibliographie}
+
+% ******************************************************
+% REFERENCIAS BIBLIOGRÁFICAS
+% ******************************************************
+% \section{Referências}
+\bibliographystyle{plain}
+\begin{small}
+  \bibliography{Bibliographie}
+\end{small}
+\section*{}
 
 \end{document}
