--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -20,6 +20,7 @@
 \usepackage[francais,listings,algo]{tcs}
 
 \usepackage[version=3]{mhchem}
+\bibliographystyle{apalike}  
 
 % Cover %
 \def \ttprofname{Isabelle Lallemand} % teachers name
@@ -383,13 +384,14 @@ conséquences  négatives,  notamment en  ce  qui  concerne  les biocarburants  
 l'énergie nucléaire.''~\cite{ONG}
 
 
-\subsection{La société en général} 
+\subsection[La société en général]
+{La société en général} 
 
 Selon des sondages environ 84\% des Français croient à la réalité du réchauffement
 climatique et  parmi ces  personnes  96\% disent que  les activités
 humaines ont intensifié le phénomène.
 Toutefois, parmi les 84\% seulement 40\% y croient "tout à fait", pendant que les autres déclarent "plutôt" y
-croire (44\%). 
+croire (44\%). ~\cite{FR}
 
 Cependant, seulement 31\% des Français sont convaincus que le réchauffement climatique est
 scientifiquement prouvé.
@@ -589,7 +591,9 @@ institutionnelles et la  expérience dans les projets pilotes  à l’échelle l
 et régionale.
 
 
-\subsubsection[La conférence annuelle des Nations-Unies sur le climat de Durban]{La conférence annuelle des Nations-Unies sur le climat de Durban (11/12/2011)}
+\subsubsection[La  conférence  annuelle  des  Nations-Unies  sur  le  climat  de
+Durban]{La  conférence  annuelle  des  Nations-Unies  sur le  climat  de  Durban
+  (11/12/2011)} 
 
 Dans  un premier  temps l’'un  des défis  de Durban  était de  mettre  en oeuvre
 certaines  des  décisions  prises  à  Cancun,  notamment  sur  le  sujet  de  la
@@ -712,10 +716,8 @@ chemin pour développer et aller négocier.
 % ******************************************************
 % REFERENCIAS BIBLIOGRÁFICAS
 % ******************************************************
-% \section{Referências}
-\bibliographystyle{plain}
 \begin{small}
-  \bibliography{Bibliographie}
+  \bibliography{proj}
 \end{small}
 \section*{}
 
